...
        }
      }
      .contentMargins(.leading, 10, for: .scrollIndicators)
      .contentMargins(.top, scrollTopPadding, for: .scrollIndicators)
      .contentMargins(.bottom, scrollBottomPadding, for: .scrollIndicators)
    }
    .accessibilityIdentifier("history-scroll-view")

    VStack(spacing: 0) {
      if bottomSeparatorVisible {
        bottomSeparator()
      }

...
